adding anchor tags across the pages

--- a/journey.html
+++ b/journey.html
@@ -43,11 +43,16 @@
         <div class="row no-gutter header-section">
             <!-- The header image was taken from https://unsplash.com/photos/IuLgi9PWETU -->
             <div class="col-lg-12 bg-image2" title="Background Image"></div>
+
+            <div class="down">
+                <a href="#journey-title"><i class="fas fa-angle-double-down down"></i></a>
+            </div>
         </div>
     </header>
 
     <!-- The content for this section was using bootstrap to make the spacing between my skills and my journey happen. On a desktop/laptop monitor, the skills would be visible as it is a bigger screen to see both skills and my journey, on smaller screen sizes. i made the skills hidden but keeping the journey visible for the user to see for screen space. -->
     <div class="main-section">
+       <div id="journey-title"></div>
         <h1 class="title">From The Beginning</h1>
 
         <!-- The skills where done using bootstrap component progress bar and changing the colour of each one depending on the skill that is being said  -->
@@ -72,21 +77,21 @@
                     <label>SQL</label>
                 </div>
                 <div class="progress">
-                    <div class="progress-bar sql" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                    <div class="progress-bar sql" role="progressbar" style="width: 65%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">65%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
                     <label>Python</label>
                 </div>
                 <div class="progress">
-                    <div class="progress-bar python" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
+                    <div class="progress-bar python" role="progressbar" style="width: 80%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">80%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
                     <label>PHP</label>
                 </div>
                 <div class="progress">
-                    <div class="progress-bar php" role="progressbar" style="width: 40%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">40%</div>
+                    <div class="progress-bar php" role="progressbar" style="width: 65%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">65%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
@@ -100,7 +105,7 @@
                     <label>ServiceNow</label>
                 </div>
                 <div class="progress">
-                    <div class="progress-bar servicenow" role="progressbar" style="width: 45%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">45%</div>
+                    <div class="progress-bar servicenow" role="progressbar" style="width: 65%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">65%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
