--- a/index.html
+++ b/index.html
@@ -46,13 +46,19 @@
             <div class="col-12 col-lg-12 col-md-12 profile-pic1">
                 <img class="profile-pic2 row" src="assets/images/me.jpg" alt="Profile Picture">
                 <h2>Project Manager / Trainee Full Stack Developer</h2>
-                <h3>Personal Portfolio</h3>
+                <h3>Personal Portfolio
+                    <br>
+                    <a href="#about-title"><i class="fas fa-angle-double-down down-index"></i></a>
+                </h3>
             </div>
+
+
         </div>
     </header>
 
     <!-- The main section is where the content of the page is placed, i have used bootstrap positioning to align the descriptions on the left while having an image on the right. -->
     <div class="main-section">
+        <div id="about-title"></div>
         <h1 class="title">About Me</h1>
         <div class="row">
             <div class="col-lg-8 aboutme">
@@ -69,44 +75,36 @@
             <div class="col-lg-12">
                 <h1 class="title">Interests</h1>
             </div>
-            <div class="col-12 col-lg-4 left-travelhidden">
-                <h2>Travelling</h2>
-                <p>Exploring the world and seeing the different natural beauties that it provides, experience something unfamiliar and leaving with new skills or knowledge.</p>
-            </div>
-            <div class="col-12 col-lg-4 col-md-5">
+
+            <div class="col-12 col-lg-5 col-md-5">
                 <img class="plane-img" src="assets/images/travelling.jpg" alt="Plane">
             </div>
-            <div class="col-12 col-lg-4 col-md-7 travel-info">
+            <div class="col-12 col-lg-7 col-md-7 travel-info">
                 <h2>Travelling</h2>
                 <p>Exploring the world and seeing the different nature beauties that it provides, experience something unfamiliar and leave with new skills or knowledge.</p>
             </div>
 
-            <div class="col-12 col-lg-4 col-md-7 programming-info">
+            <div class="col-12 col-lg-7 col-md-7 programming-info">
                 <h2>Programming</h2>
                 <p>The pleasure of making things that are useful to yourself as well as for other people. One of the most satisfying aspects of the programming is seeing code you wrote deployed in a live environment.</p>
             </div>
-            <div class="col-12 col-lg-4 col-md-5">
+            <div class="col-12 col-lg-5 col-md-5">
                 <img class="laptop-img" src="assets/images/programming.jpg" alt="laptop">
             </div>
 
-            <div class="col-12 col-lg-4"></div>
-            <div class="col-12 col-lg-4 left-fitnesshidden">
-                <h2>Fitness</h2>
-                <p>Exercising and taking part in sporting activities is one of my biggest enjoyments.</p>
-            </div>
-            <div class="col-12 col-lg-4 col-md-5">
+            <div class="col-12 col-lg-5 col-md-5">
                 <img class="fitness-img" src="assets/images/sports.jpg" alt="fitness">
             </div>
-            <div class="col-12 col-lg-4 col-md-7 fitness-info">
+            <div class="col-12 col-lg-7 col-md-7 fitness-info">
                 <h2>Fitness</h2>
                 <p>Exercising and taking part in sporting activities is one of my biggest enjoyments.</p>
             </div>
 
-            <div class="col-12 col-lg-4 col-md-7 cooking-info">
+            <div class="col-12 col-lg-7 col-md-7 cooking-info">
                 <h2>Cooking</h2>
                 <p>I enjoy cooking, as I indulge cooking different cuisines, as well as making something out of different ingredients and spices.</p>
             </div>
-            <div class="col-12 col-lg-4 col-md-5">
+            <div class="col-12 col-lg-5 col-md-5">
                 <img class="cooking-img" src="assets/images/cooking.jpg" alt="laptop">
             </div>
         </div>
