Added a anchor tag to send people to another page

--- a/connect.html
+++ b/connect.html
@@ -49,11 +49,14 @@
                         a silly question!</h1>
                 </div>
             </div>
+            <a href="#connect-title"><i class="fas fa-angle-double-down down"></i></a>
+
         </div>
     </header>
 
     <!-- The main section is where the main content of the page is placed, i have just placed and header and three questions which would send users to the contact form.  -->
     <div class="main-section">
+        <div id="connect-title"></div>
         <h1 class="title">A Few Ways To Reach Out!</h1>
 
         <div class="main-content questions">
