--- a/portfolio.html
+++ b/portfolio.html
@@ -44,11 +44,13 @@
         <div class="row no-gutter header-section">
             <!-- The header image was taken from https://unsplash.com/photos/b21Ty33CqVs -->
             <div class="col-lg-12 bg-image3" title="Background Image"></div>
+            <a href="#portfolio-title"><i class="fas fa-angle-double-down down"></i></a>
         </div>
     </header>
 
     <!--   the section is a placeholder of the other sites that has been developed within this course. I placed the sites in a card format with a small description of the site that was built. Each card had the image of the homepage of each site. There is a button within each card to allow the user to physically view the site in a separate tab -->
     <div class="main-section">
+        <div id="portfolio-title"></div>
         <h1 class="title">Project Profolio</h1>
 
         <div class="col-lg-12 projects">
