removed the white spaces from the index desktop version

--- a/connect.html
+++ b/connect.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Adnan Muhtadi Portfolio</title>
+    <title>Adnan Muhtadi Connect</title>
 </head>
 
 <body>
