--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Adnan Muhtadi Portfolio</title>
+    <title>Adnan Muhtadi</title>
 </head>
 
 <body>
@@ -75,7 +75,10 @@
             <div class="col-lg-12">
                 <h1 class="title">Interests</h1>
             </div>
-
+            <div class="col-12 col-lg-7 col-md-7 left-travelhidden">
+                <h2>Travelling</h2>
+                <p>Exploring the world and seeing the different nature beauties that it provides, experience something unfamiliar and leave with new skills or knowledge.</p>
+            </div>
             <div class="col-12 col-lg-5 col-md-5">
                 <img class="plane-img" src="assets/images/travelling.jpg" alt="Plane">
             </div>
@@ -92,6 +95,10 @@
                 <img class="laptop-img" src="assets/images/programming.jpg" alt="laptop">
             </div>
 
+            <div class="col-12 col-lg-7 col-md-7 left-fitnesshidden">
+                <h2>Fitness</h2>
+                <p>Exercising and taking part in sporting activities is one of my biggest enjoyments.</p>
+            </div>
             <div class="col-12 col-lg-5 col-md-5">
                 <img class="fitness-img" src="assets/images/sports.jpg" alt="fitness">
             </div>
