Fixed the commeting for the files

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </nav>
 
-    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. within Index.html, i have also added another picture on top of the main header imager to show myself as well as adding a headline text within it. -->
+    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. within Index.html, i have also added another picture on top of the main header imager to show myself as well as adding a headline text within it. I also added an anchor tag for big screen due to the fact it would allow the user to know there is further content -->
     <header>
         <div class="row no-gutter header-section">
             <div class="col-lg-12 bg-image1" title="Background Image"></div>
@@ -67,6 +67,7 @@
             </div>
 
             <div class="col-lg-4">
+                <!-- The about me image was taken from https://unsplash.com/photos/GDLdU80UDko -->
                 <img class="aboutme-img" src="assets/images/chess.jpg" alt="Mind of Chess">
             </div>
         </div>
@@ -81,6 +82,7 @@
                 <p>Exploring the world and seeing the different nature beauties that it provides, experience something unfamiliar and leave with new skills or knowledge.</p>
             </div>
             <div class="col-12 col-lg-5 col-md-5">
+                <!-- The travelling image was taken from https://unsplash.com/photos/Y_LWT7HbpQc -->
                 <img class="plane-img" src="assets/images/travelling.jpg" alt="Plane">
             </div>
             <div class="col-12 col-lg-7 col-md-7 travel-info">
@@ -93,6 +95,7 @@
                 <p>The pleasure of making things that are useful to yourself as well as for other people. One of the most satisfying aspects of the programming is seeing code you wrote deployed in a live environment.</p>
             </div>
             <div class="col-12 col-lg-5 col-md-5">
+                <!-- The programming image was taken from https://unsplash.com/photos/iacpoKgpBAM -->
                 <img class="laptop-img" src="assets/images/programming.jpg" alt="laptop">
             </div>
 
@@ -101,6 +104,7 @@
                 <p>Exercising and taking part in sporting activities is one of my biggest enjoyments.</p>
             </div>
             <div class="col-12 col-lg-5 col-md-5">
+                <!-- The fitness image was taken from https://unsplash.com/photos/Cv7rucR1bhQ -->
                 <img class="fitness-img" src="assets/images/sports.jpg" alt="fitness">
             </div>
             <div class="col-12 col-lg-7 col-md-7 fitness-info">
@@ -113,6 +117,7 @@
                 <p>I enjoy cooking, as I indulge cooking different cuisines, as well as making something out of different ingredients and spices.</p>
             </div>
             <div class="col-12 col-lg-5 col-md-5">
+                <!-- The cooking image was taken from https://unsplash.com/photos/qeWlYA2G_n4 -->
                 <img class="cooking-img" src="assets/images/cooking.jpg" alt="laptop">
             </div>
         </div>
