--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
     </nav>
 
 
-    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. -->
+    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. I also added an anchor tag for big screen due to the fact it would allow the user to know there is further content. -->
     <header>
         <div class="row no-gutter header-section">
             <!-- The header image was taken from https://unsplash.com/photos/b21Ty33CqVs -->
