--- a/connect.html
+++ b/connect.html
@@ -38,19 +38,16 @@
     </nav>
 
 
-    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. There is a small line of text which would display a mini header (catch phrase) -->
+    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. There is a small line of text which would display a mini header (catch phrase). I also added an anchor tag for big screen due to the fact it would allow the user to know there is further content. -->
     <header>
         <div class="row no-gutter header-section">
             <!-- The header image was taken from https://unsplash.com/photos/oIpJ8koLx_s -->
             <div class="col-12 col-lg-12 bg-image4" title="Background Image"></div>
-            <div class="main-me-text">
-                <div class="connect-title">
-                    <h1>There is no such thing as<br>
-                        a silly question!</h1>
-                </div>
+            <div class="connect-title">
+                <h1>There is no such thing as<br>
+                    a silly question!</h1>
             </div>
             <a href="#connect-title"><i class="fas fa-angle-double-down down"></i></a>
-
         </div>
     </header>
 
@@ -78,7 +75,7 @@
                         <label for="user-fullname">Full Name:</label>
                     </div>
                     <div class="col-md-9 col-sm-10">
-                        <input type="text" class="form-control" id="user-fullname">
+                        <input type="text" class="form-control" id="user-fullname" required>
                     </div>
                 </div>
                 <br>
@@ -108,13 +105,13 @@
                         <label for="user-message">Message:</label>
                     </div>
                     <div class="col-md-9 col-sm-10">
-                        <textarea class="form-control" id="user-message" rows="3"></textarea>
+                        <textarea class="form-control" id="user-message" rows="3" required></textarea>
                     </div>
                 </div>
 
                 <br>
                 <input type="submit" value="Submit" id="submit">
-                </form>
+            </form>
             <br>
             <br>
             <br>
