fixed the grammer on the comments

--- a/connect.html
+++ b/connect.html
@@ -38,7 +38,7 @@
     </nav>
 
 
-    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. There is a small line of text which would display a mini header (catch phrase). I also added an anchor tag for big screen due to the fact it would allow the user to know there is further content. -->
+    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. There is a small line of text which would display a mini header (catchphrase). I also added an anchor tag for big screen due to the fact it would allow the user to know there is further content. -->
     <header>
         <div class="row no-gutter header-section">
             <!-- The header image was taken from https://unsplash.com/photos/oIpJ8koLx_s -->
@@ -68,7 +68,7 @@
         <div class="center-form">
             <h2 id="contactlabel">Contact Form</h2>
 
-            <!-- utilised W3School to assist with the remember how the structure of the of the form https://www.w3schools.com/html/html_forms.asp -->
+            <!-- utilised W3School to assist with the remember how the structure of the form https://www.w3schools.com/html/html_forms.asp -->
             <form action="#" name="connect-form">
                 <div class="form-group row">
                     <div class="col-md-3 col-sm-2 col-form-label labelatt">
