--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class="col-12 col-lg-7 col-md-7 left-travelhidden">
                 <h2>Travelling</h2>
-                <p>Exploring the world and seeing the different nature beauties that it provides, experience something unfamiliar and leave with new skills or knowledge.</p>
+                <p>Exploring the world and seeing the different natural beauties that it provides, experience something unfamiliar and leave with new skills or knowledge.</p>
             </div>
             <div class="col-12 col-lg-5 col-md-5">
                 <!-- The travelling image was taken from https://unsplash.com/photos/Y_LWT7HbpQc -->
