--- a/journey.html
+++ b/journey.html
@@ -206,7 +206,7 @@
                 </div>
             </div>
 
-            <!-- This is a link which take the user to another tab and enable the opportunity to view my CV or download it if required. -->
+            <!-- This is a link which takes the user to another tab and enables the opportunity to view my CV or download it if required. -->
             <div class="col-12 col-sm-12 journey-finisher">
                 <h3><a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank">CLICK HERE </a>to know more about me</h3>
             </div>
