--- a/portfolio.html
+++ b/portfolio.html
@@ -48,13 +48,13 @@
         </div>
     </header>
 
-    <!--   the section is a placeholder of the other sites that has been developed within this course. I placed the sites in a card format with a small description of the site that was built. Each card had the image of the homepage of each site. There is a button within each card to allow the user to physically view the site in a separate tab -->
+    <!--   the section is a placeholder of the other sites that have been developed within this course. I placed the sites in a card format with a small description of the site that was built. Each card had the image of the homepage of each site. There is a button within each card to allow the user to physically view the site in a separate tab -->
     <div class="main-section">
         <div id="portfolio-title"></div>
         <h1 class="title">Project Profolio</h1>
 
         <div class="col-lg-12 projects">
-            <p>A placeholder for all sites that has been developed during the duration of my course. It demostrate the different programming languages used to develop the sites.</p>
+            <p>A placeholder for all sites that have been developed during the duration of my course. It demonstrates the different programming languages used to develop the sites.</p>
         </div>
 
         <section class="row col-12 portfolio-thumbs">
