spell checked the portfolio and made amendments

--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
                         <img src="assets/images/stream.jpg" alt="Stream" class="timage"></a>
                     <div class="container-thumb">
                         <h4><b>Stream</b></h4>
-                        <p>To educate individuals how to program as well as well as short cuts to different online tools that is involved in building websites </p>
+                        <p>To educate individuals on how to program as well as short cuts to different online tools that are involved in building websites </p>
                     </div>
                     <a href="assets/portfolio-sites/stream/index.html" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
                 </div>
@@ -89,7 +89,7 @@
                         <img src="assets/images/whisky.jpg" alt="Whisky Drop" class="timage"></a>
                     <div class="container-thumb">
                         <h4><b>Whisky Drop</b></h4>
-                        <p>To advertise a promotion on whisky that is currently on offer when signing up to a monthly subscritpion.</p>
+                        <p>To advertise a promotion on whisky that is currently on offer when signing up to a monthly subscription.</p>
                     </div>
                     <a href="assets/portfolio-sites/whiskey-drop/index.html" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
                 </div>
@@ -101,7 +101,7 @@
                         <img src="assets/images/resume.jpg" alt="Rosie Resume" class="timage"></a>
                     <div class="container-thumb">
                         <h4><b>Rosie Resume</b></h4>
-                        <p>To create an online Resume for Rosie which show tells her skills as have access to her CV, with quick links to her soical media. </p>
+                        <p>To create an online Resume for Rosie which show tells her skills to have access to her CV, with quick links to her social media.</p>
                     </div>
                     <a href="assets/portfolio-sites/resume-project/index.html" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
                 </div>
