Fixed a consistancy issue within the footer as well as completed the Footer feature testing

--- a/connect.html
+++ b/connect.html
@@ -136,7 +136,7 @@
                         </div>
                         <div class="w-100"></div>
                         <div class="col col-lg-6 col-md-12">
-                            <a href="portfolio.html">Portfolio</a>
+                            <a href="portfolio.html">My Portfolio</a>
                         </div>
                         <div class="col col-lg-6 col-md-12">
                             <a href="connect.html">Connect</a>
