relinked the sites to other repositories

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                         <h4><b>Love Running</b></h4>
                         <p>A scheduled based for individuals who would like to run as well as a photo gallery to show the fun that is part of the group.</p>
                     </div>
-                    <a href="assets/portfolio-sites/love-running/index.html" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
+                    <a href="https://adnanmuhtadi.github.io/love-running/" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
                 </div>
             </div>
 
@@ -79,7 +79,7 @@
                         <h4><b>Stream</b></h4>
                         <p>To educate individuals on how to program as well as short cuts to different online tools that are involved in building websites </p>
                     </div>
-                    <a href="assets/portfolio-sites/stream/index.html" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
+                    <a href="https://adnanmuhtadi.github.io/stream/" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
                 </div>
             </div>
 
@@ -91,7 +91,7 @@
                         <h4><b>Whisky Drop</b></h4>
                         <p>To advertise a promotion on whisky that is currently on offer when signing up to a monthly subscription.</p>
                     </div>
-                    <a href="assets/portfolio-sites/whiskey-drop/index.html" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
+                    <a href="https://adnanmuhtadi.github.io/whiskey-drop/" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
                 </div>
             </div>
 
@@ -103,7 +103,7 @@
                         <h4><b>Rosie Resume</b></h4>
                         <p>To create an online Resume for Rosie which show tells her skills to have access to her CV, with quick links to her social media.</p>
                     </div>
-                    <a href="assets/portfolio-sites/resume-project/index.html" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
+                    <a href="https://adnanmuhtadi.github.io/resume-project/" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
                 </div>
             </div>
         </section>
