shrunk the length of long lines

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<!-- declared the doctype as well as the language in the HTML -->
+<!-- Declared the doctype as well as the language in the HTML -->
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- in the head, i have declared the character type as well initiating the viewport for it to be responsive. i have linked the bootstrap and font awesome CDNs to the site so it would call from their directors. I have an external document which is used for the styling, which meant i associated the stylesheet to the page. -->
+<!-- In the head, i have declared the character type as well initiating the viewport for it to be responsive.
+I have linked the bootstrap and font awesome CDNs to the site so it would call from their directors.
+I have an external document which is used for the styling, which meant i associated the stylesheet to the page. -->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +15,9 @@
 </head>
 
 <body>
-    <!-- This section is for the navigation where bootstrap was used to align the four pages within the row. The active class would display which page the user is on at that specific time. Each link has a hoover effect which would enable the user to see which link they could go to. -->
+    <!-- This section is for the navigation where bootstrap was used to align the four pages within the row.
+    The active class would display which page the user is on at that specific time.
+    Each link has a hoover effect which would enable the user to see which link they could go to. -->
     <nav>
         <div class="row nav-section nav">
             <div class="col-12 col-lg-4 col-md-5 nav-link active mainhome">
@@ -32,7 +36,9 @@
         </div>
     </nav>
 
-    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. within Index.html, i have also added another picture on top of the main header imager to show myself as well as adding a headline text within it. I also added an anchor tag for big screen due to the fact it would allow the user to know there is further content -->
+    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen.
+    Within Index.html, i have also added another picture on top of the main header imager to show myself as well as adding a headline text within it.
+    I also added an anchor tag for big screen due to the fact it would allow the user to know there is further content -->
     <header>
         <div class="row no-gutter header-section">
             <div class="col-lg-12 bg-image1" title="Background Image"></div>
@@ -49,13 +55,16 @@
         </div>
     </header>
 
-    <!-- The main section is where the content of the page is placed, i have used bootstrap positioning to align the descriptions on the left while having an image on the right. -->
+    <!-- The main section is where the content of the page is placed, i have used bootstrap positioning
+    to align the descriptions on the left while having an image on the right. -->
     <div class="main-section">
         <div id="about-title"></div>
         <h1 class="title">About Me</h1>
         <div class="row">
             <div class="col-lg-8 aboutme">
-                <p>A versatile Project Manager professional with over 5 years’ experience with enterprise-level and consumer-focused technology solutions. Champions supportive and collaborative team environments to effectively realise business objectives with proven success in developing and implementing internal and consumer-facing IP.</p>
+                <p>A versatile Project Manager professional with over 5 years’ experience with enterprise-level and consumer-focused technology solutions.
+                Champions supportive and collaborative team environments to effectively realise business objectives
+                with proven success in developing and implementing internal and consumer-facing IP.</p>
             </div>
             <div class="col-lg-4">
                 <!-- The about me image was taken from https://unsplash.com/photos/GDLdU80UDko -->
@@ -63,14 +72,19 @@
             </div>
         </div>
 
-        <!-- the interests was built with the bootstrap column structure. Throughout the section, depending on the screen that the website is being viewed in, the layout of the interests would change, that is the reason why some of the content has been put twice in the same header. When the screen is on the 21-inch display, it would show side by side, when the screen is mobile size, the content would be displayed on top of each other. -->
+        <!-- The interests was built with the bootstrap column structure.
+        Throughout the section, depending on the screen that the website is being viewed in,
+        the layout of the interests would change, that is the reason why some of the content has been put twice in the same header.
+        When the screen is on the 21-inch display, it would show side by side, when the screen is mobile size,
+        the content would be displayed on top of each other. -->
         <div class="row interests">
             <div class="col-lg-12">
                 <h1 class="title">Interests</h1>
             </div>
             <div class="col-12 col-lg-7 col-md-7 left-travelhidden">
                 <h2>Travelling</h2>
-                <p>Exploring the world and seeing the different natural beauties that it provides, experience something unfamiliar and leave with new skills or knowledge.</p>
+                <p>Exploring the world and seeing the different natural beauties that it provides,
+                experience something unfamiliar and leave with new skills or knowledge.</p>
             </div>
             <div class="col-12 col-lg-5 col-md-5">
                 <!-- The travelling image was taken from https://unsplash.com/photos/Y_LWT7HbpQc -->
@@ -78,11 +92,13 @@
             </div>
             <div class="col-12 col-lg-7 col-md-7 travel-info">
                 <h2>Travelling</h2>
-                <p>Exploring the world and seeing the different nature beauties that it provides, experience something unfamiliar and leave with new skills or knowledge.</p>
+                <p>Exploring the world and seeing the different nature beauties that it provides, experience
+                something unfamiliar and leave with new skills or knowledge.</p>
             </div>
             <div class="col-12 col-lg-7 col-md-7 programming-info">
                 <h2>Programming</h2>
-                <p>The pleasure of making things that are useful to yourself as well as for other people. One of the most satisfying aspects of the programming is seeing code you wrote deployed in a live environment.</p>
+                <p>The pleasure of making things that are useful to yourself as well as for other people.
+                One of the most satisfying aspects of the programming is seeing code you wrote deployed in a live environment.</p>
             </div>
             <div class="col-12 col-lg-5 col-md-5">
                 <!-- The programming image was taken from https://unsplash.com/photos/iacpoKgpBAM -->
@@ -111,7 +127,8 @@
         </div>
     </div>
 
-    <!-- The footer has the bootstrap column structure which would split the footer into 3 sections. (quick links / social media / CV) the quick links would navigate users to the other pages of the site, again, with different styling on different devices used. -->
+    <!-- The footer has the bootstrap column structure which would split the footer into 3 sections, (quick links / social media / CV).
+    The quick links would navigate users to the other pages of the site, again, with different styling on different devices used. -->
     <footer>
         <div class="footer-section">
             <div class="row">
