--- a/journey.html
+++ b/journey.html
@@ -184,7 +184,8 @@
         </section>
     </div>
 
-    <!-- The footer has the bootstrap column structure which would split the footer into 3 sections. (quick links / social media / CV) the quick links would navigate users to the other pages of the site, again, with different styling on different devices used. -->
+    <!-- The footer has the bootstrap column structure which would split the footer into 3 sections, (quick links / social media / CV).
+    The quick links would navigate users to the other pages of the site, again, with different styling on different devices used. -->
     <footer>
         <div class="footer-section">
             <div class="row">
