shortened the length of my notes within the code of the project

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ I have an external document which is used for the styling, which meant i associa
                     </div>
                 </div>
 
-                <!-- being able to view and download my CV from this section of the footer. -->
+                <!-- Being able to view and download my CV from this section of the footer. -->
                 <div class="col-lg-4 col-md-3 mycv">
                     <h4>Take a copy of my CV!</h4>
                     <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank"><i class="fas fa-file cv" aria-hidden="true"></i></a>
