--- a/journey.html
+++ b/journey.html
@@ -1,8 +1,10 @@
-<!-- declared the doctype as well as the language in the HTML -->
+<!-- Declared the doctype as well as the language in the HTML -->
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- in the head, i have declared the character type as well initiating the viewport for it to be responsive. i have linked the bootstrap and font awesome CDNs to the site so it would call from their directors. I have an external document which is used for the styling, which meant i associated the stylesheet to the page. -->
+<!-- In the head, i have declared the character type as well initiating the viewport for it to be responsive.
+I have linked the bootstrap and font awesome CDNs to the site so it would call from their directors.
+I have an external document which is used for the styling, which meant i associated the stylesheet to the page. -->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +15,9 @@
 </head>
 
 <body>
-    <!-- This section is for the navigation where bootstrap was used to align the four pages within the row. The active class would display which page the user is on at that specific time. Each link has a hoover effect which would enable the user to see which link they could go to. -->
+    <!-- This section is for the navigation where bootstrap was used to align the four pages within the row.
+    The active class would display which page the user is on at that specific time.
+    Each link has a hoover effect which would enable the user to see which link they could go to. -->
     <nav>
         <div class="row nav-section nav">
             <div class="col-12 col-lg-4 col-md-5 nav-link mainhome">
@@ -32,7 +36,8 @@
         </div>
     </nav>
 
-    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. I also added an anchor tag for big screen due to the fact it would allow the user to know there is further content -->
+    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen.
+    I also added an anchor tag for big screen due to the fact it would allow the user to know there is further content -->
     <header>
         <div class="row no-gutter header-section">
             <!-- The header image was taken from https://unsplash.com/photos/IuLgi9PWETU -->
@@ -41,7 +46,9 @@
         </div>
     </header>
 
-    <!-- The content for this section was using bootstrap to make the spacing between my skills and my journey happen. On a desktop/laptop monitor, the skills would be visible as it is a bigger screen to see both skills and my journey, on smaller screen sizes. i made the skills hidden but keeping the journey visible for the user to see for screen space. -->
+    <!-- The content for this section was using bootstrap to make the spacing between my skills and my journey happen.
+    On a desktop/laptop monitor, the skills would be visible as it is a bigger screen to see both skills and my journey,
+    on smaller screen sizes. i made the skills hidden but keeping the journey visible for the user to see for screen space. -->
     <div class="main-section">
        <div id="journey-title"></div>
         <h1 class="title">From The Beginning</h1>
@@ -128,7 +135,8 @@
                 </div>
             </div>
 
-            <!-- the journey was used in a previous project during this course, i used it for my own journey section but extended it to carry on with the dates. I got the concept of the code from Rosie Resume project. -->
+            <!-- the journey was used in a previous project during this course, i used it for my own journey section but extended it to carry on with the dates.
+            I got the concept of the code from Rosie Resume project. -->
             <div class="col-8">
                 <div class="journey">
                     <div class="journey-item " data-journeydates="May 19th 1990">
@@ -223,7 +231,7 @@
                     </div>
                 </div>
 
-                <!-- being able to view and download my CV from this section of the footer. -->
+                <!-- Being able to view and download my CV from this section of the footer. -->
                 <div class="col-lg-4 col-md-3 mycv">
                     <h4>Take a copy of my CV!</h4>
                     <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank"><i class="fas fa-file cv" aria-hidden="true"></i></a>
