--- a/connect.html
+++ b/connect.html
@@ -2,7 +2,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- in the head, i have declared the character type as well initiating the viewport for it to be responsive. i have linked the bootstrap and font awesome CDNs to the site so it would call from their directors. I have an external document which is used for the styling, which meant i associated the stylesheet to the page. -->
+<!-- In the head, i have declared the character type as well initiating the viewport for it to be responsive.
+I have linked the bootstrap and font awesome CDNs to the site so it would call from their directors.
+I have an external document which is used for the styling, which meant i associated the stylesheet to the page. -->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +15,9 @@
 </head>
 
 <body>
-    <!-- This section is for the navigation where bootstrap was used to align the four pages within the row. The active class would display which page the user is on at that specific time. Each link has a hoover effect which would enable the user to see which link they could go to. -->
+    <!-- This section is for the navigation where bootstrap was used to align the four pages within the row.
+    The active class would display which page the user is on at that specific time.
+    Each link has a hoover effect which would enable the user to see which link they could go to. -->
     <nav>
         <div class="row nav-section nav">
             <div class="col-12 col-lg-4 col-md-5 nav-link mainhome">
@@ -32,7 +36,9 @@
         </div>
     </nav>
 
-    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. There is a small line of text which would display a mini header (catchphrase). I also added an anchor tag for big screen due to the fact it would allow the user to know there is further content. -->
+    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen.
+    There is a small line of text which would display a mini header (catchphrase).
+    I also added an anchor tag for big screen due to the fact it would allow the user to know there is further content. -->
     <header>
         <div class="row no-gutter header-section">
             <!-- The header image was taken from https://unsplash.com/photos/oIpJ8koLx_s -->
@@ -45,7 +51,8 @@
         </div>
     </header>
 
-    <!-- The main section is where the main content of the page is placed, i have just placed and header and three questions which would send users to the contact form.  -->
+    <!-- The main section is where the main content of the page is placed, i have just placed and header and three questions
+    which would send users to the contact form.  -->
     <div class="main-section">
         <div id="connect-title"></div>
         <h1 class="title">A Few Ways To Reach Out!</h1>
@@ -56,7 +63,9 @@
         </div>
     </div>
 
-    <!-- created the form using columns to perfectly align the labels with the text boxes. this would then have a submit button at the end of the form. The button is currently not active or linked to anything due to the fact it is only for display for now. -->
+    <!-- Created the form using columns to perfectly align the labels with the text boxes.
+    This would then have a submit button at the end of the form.
+    The button is currently not active or linked to anything due to the fact it is only for display for now. -->
     <div class="connect-form">
         <div class="center-form">
             <h2 id="contactlabel">Contact Form</h2>
@@ -147,7 +156,7 @@
                     </div>
                 </div>
 
-                <!-- being able to view and download my CV from this section of the footer. -->
+                <!-- Being able to view and download my CV from this section of the footer. -->
                 <div class="col-lg-4 col-md-3 mycv">
                     <h4>Take a copy of my CV!</h4>
                     <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank"><i class="fas fa-file cv" aria-hidden="true"></i></a>
