Mod - Remove old role
remove old role

--- a/journey.html
+++ b/journey.html
@@ -1,4 +1,4 @@
-<!-- Declared the doctype as well as the language in the HTML -->
+i<!-- Declared the doctype as well as the language in the HTML -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -178,10 +178,7 @@ I have an external document which is used for the styling, which meant i associa
                         <h4>McCann Worldgroup</h4>
                         <p>Product Manager</p>
                     </div>
-                    <div class="journey-item" data-journeydates="August 10th 2020">
-                        <h4>ITOM Solution</h4>
-                        <p>Project Manager</p>
-                    </div>
+                    
                 </div>
             </div>
 
